--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   @media screen and (max-width: 350px){
     .box1{
       display: none;
+      position: static;
     }
     .carousel-item img {
     width: 100%;
